# pocketsequencer

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
engine/: Cargo.toml
engine/src/: fmt.rs  lib.rs  prelude.rs
engine/src/input/: mod.rs
firmware/: Cargo.toml  screenlog.0
firmware/nrf5340/: CMakeLists.txt  nrf5340_audio_dk_nrf5340_cpuapp.overlay  prj.conf
firmware/nrf5340/boards/northernpaws/pocketsequencer/: Kconfig.defconfig  Kconfig.pocketsequencer  board.cmake  board.yml  pocketsequencer-pinctrl.dtsi  pocketsequencer_nrf5340_cpuapp.dts  pocketsequencer_nrf5340_cpuapp.yml  pocketsequencer_nrf5340_cpuapp_ns.dts  pocketsequencer_nrf5340_cpuapp_ns.yml  pocketsequencer_nrf5340_cpunet.dts  pocketsequencer_nrf5340_cpunet.yml
firmware/nrf5340/src/: main.c
firmware/src/: lib.rs
firmware/src/hardware/: codec.rs  internal_storage.rs  is42s16160j_7.rs  keypad.rs  mod.rs  sd_card.rs  stm6601.rs  tca8418rtwr.rs
firmware/src/hardware/bq27531_g1/: command.rs  mod.rs
firmware/src/hardware/drivers/: is42s16160j_7.rs  stm6601.rs
firmware/src/hardware/drivers/fusb302b/: register.rs
firmware/src/hardware/drivers/nau88c22yg/: mod.rs  register.rs
firmware/src/hardware/fusb302b/: mod.rs  register.rs
firmware/src/hardware/tca8418/: mod.rs  register.rs
firmware/src/hardware/usb/: mod.rs
firmware/stm32/: Cargo.toml  memory.x
firmware/stm32/src/: lib.rs
firmware/stm32/src/diagnostics/: battery.rs  i2c.rs  input.rs  mod.rs
firmware/stm32/src/hardware/: display copy.rs  internal_storage.rs  keypad.rs  mod.rs  mpu.rs  power.rs  sd_card.rs
firmware/stm32/src/hardware/display/: fmc.rs  mod.rs  sram.rs
firmware/stm32/src/hardware/display/interface/: fmc.rs  mod.rs
firmware/stm32/src/hardware/drivers/: mod.rs  stm6601.rs
firmware/stm32/src/hardware/drivers/bq27531_g1/: charger.rs  command.rs  mod.rs  registers.rs
firmware/stm32/src/hardware/drivers/bq27531_g1/flash/: mod.rs
firmware/stm32/src/hardware/drivers/bq27531_g1/flash/class/: configuration.rs  mod.rs
firmware/stm32/src/hardware/drivers/fusb302b/: mod.rs  register.rs
firmware/stm32/src/hardware/drivers/nau88c22yg/: mod.rs  register.rs
firmware/stm32/src/hardware/drivers/tca8418/: mod.rs  register.rs
firmware/stm32/src/hardware/keypad/: mod.rs
firmware/stm32/src/hardware/keypad/buttons/: mod.rs
firmware/stm32/src/hardware/keypad/lights/: dma.rs  mod.rs
firmware/stm32/src/hardware/usb/: mod.rs
hardware/: .gitignore  README.md
hardware/3dmodels/: 436331045822.stp  532610271.STEP  825-22-002-10-001101.stp  AS01808AO-SC18-WP-R.step  ATTRIBUTION.md  BQ27531YZFR-G1.step  CON10_2X5_DUK_FTSH_SAI.step  CON14_2X7_DUK_FTSH_SAI.step  DAEX-9-4SM.step  ECS-.327-12.5-1210-TR.step  ER-TFT028-4.2.stp  ER-TFT028-4.2.x_t  FSA2466UMX.step  FTSH-105-01-F-D-K.step  FTSH-105-01-F-DV-K.stp  FTSH-107-01-F-DV-K.stp  IS42S16160J-7BLI.stp  NORA-B100-00B.stp  SI4704-D60-GMR.stp  SKRTLAE010.STEP  SP3401-02UTG.stp  Same_Sky_CMS-160925-078SP.step  W25Q512JVEIQ.stp  lumberg_1503_02.stp  lumberg_1503_03.stp
hardware/boards/v0.1/: MCU.kicad_sch  README.md  audio.kicad_sch  display.kicad_sch  fp-lib-table  keypad.kicad_sch  lighting.kicad_sch  memory.kicad_sch  midi_cv.kicad_sch  peripherals.kicad_sch  pocket_synth.kicad_dru  pocket_synth.kicad_pro  pocket_synth.kicad_sch  power.kicad_sch  rf.kicad_sch  sym-lib-table
hardware/boards/v0.1/production/: netlist.ipc
hardware/footprints/pocket_synth.pretty/: 436331045822.kicad_mod  825-22-002-10-001101.kicad_mod  ADS7128IRTER.kicad_mod  AS01808AO-SC18-WP-R.kicad_mod  BGA15C50P3X5_196X261X63.kicad_mod  CMS-160925-078SP.kicad_mod  CON10_2X5_DUK_FTSH_SAI-L.kicad_mod  CON10_2X5_DUK_FTSH_SAI-M.kicad_mod  CON10_2X5_DUK_FTSH_SAI.kicad_mod  CON14_2X7_DUK_FTSH_SAI-M.kicad_mod  CONN_2082940000-SD_02_MOL.kicad_mod  DA7280-00FVC.kicad_mod  ER-CON06HB-1.kicad_mod  ER-TFT024IPS-3.kicad_mod  ER-TFT028A2-4.kicad_mod  FSA2466UMX.kicad_mod  FX6-20P-0.8SV1(71).kicad_mod  IS42S16160J-7BLI.kicad_mod  KMR221_CNK.kicad_mod  LMA3722T421-OA5.kicad_mod  ME16WS03.kicad_mod  MOLEX_532610271.kicad_mod  NAU88C22YG.kicad_mod  NORAB10000B.kicad_mod  QFN50P400X400X100-25N.kicad_mod  SAMTEC_FTSH-105-01-F-D-K.kicad_mod  SI4703-C19-GMR.kicad_mod  SI4704-D60-GMR.kicad_mod  SK6812MINI-E.kicad_mod  SMD1612-4P.kicad_mod  SN74AHCT1G125DBVR.kicad_mod  SP340102UTG.kicad_mod  SW_Hotswap_Kailh_Choc_V1V2_1.00u_Pressure.kicad_mod  SW_Hotswap_Kailh_Choc_V1V2_Plated_1.00u.kicad_mod  SW_Hotswap_Kailh_Choc_V1_1.00u_Pressure.kicad_mod  TLP2362TPR_E.kicad_mod  Untitled.kicad_mod  W25Q512JVEIQ.kicad_mod  XTAL_8Q-25.000MEEV-T.kicad_mod  XTAL_ECS-.327-12.5-1210-TR.kicad_mod
hardware/symbols/: pocket_synth.kicad_sym
