[package]
name = "firmware"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 0 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 2 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

[dependencies]

engine = { path = "../../engine", features = ["defmt"]}

# Debug logging from the firmware by defmt via an RTT channel.
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# Provides a panic handler for `probe-run`.
#
# The `print-defmt` feature prints panic messages via defmt.
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Static friendly data structures for avoiding dnymaic memory allocation.
heapless = { version = "0.9.1", default-features = false }

# ARM Cortex support.
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# Rust embedded crates
embedded-hal = "1.0.0"

# Embassy HAL
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32h743zi", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-embedded-hal = { version = "0.5.0" }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.2" }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
assign-resources = "0.5.0"
critical-section = "1.2.0"

# Provides an interface to the STM32's FMC for SDRAM access.
stm32-fmc = { version = "0.4.0", features = ["defmt"] }

# Provides graphics types for embedded programming.
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embedded-graphics-core = "0.4.0"

# Provides MIPI over parallel command set for display.
mipidsi = { version = "0.9.0", features = ["defmt"] }
embassy-sync = "0.7.2"
static_cell = "2.1.1"
embedded-sdmmc = "0.9.0"
embedded-hal-bus = "0.3.0"

# SD card FatFS with async support.
embedded-fatfs = { version = "0.1.0", default-features = false, features = ["defmt"] }

sdspi = { version = "0.1.0", features = ["defmt"] } # defmt feature seems to cause issue
block-device-adapters = { version = "0.2.0" }

aligned = "0.4.2"
embedded-hal-async = "1.0.0"

bitfield = "0.19.3"
bit-struct = "0.3.2"

concat-idents = "1.1.5"

byteorder = { version = "1.5.0", default-features = false }
proc-bitfield = "0.5.2"
rgb-led-pwm-dma-maker = "0.1.3"
mbr-nostd = "0.1.0"
defmt-serial = "0.10.0"

fatfs = { version = "0.4", default-features = false }
sdio-host = "0.9.0"
embedded-io-async = "0.6.1"

# MIDI Decoding and Encoding support.
midly = { version = "0.5.3", default-features = false }
grounded = "0.2.0"
ili9341 = "0.6.0"
display-interface-parallel-gpio = "0.7.0"
lcd-async = "0.1.1"

[patch.crates-io]
# Adds additional FMC constructors.. requires patching ALL embassy packages for compatability to work correctly.
embassy-stm32 = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-embedded-hal = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-executor = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-time = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-futures = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-usb = { git = 'https://github.com/northernpaws/embassy', branch = "main" }
embassy-sync = { git = 'https://github.com/northernpaws/embassy', branch = "main" }

embedded-fatfs = { git = 'https://github.com/northernpaws/embedded-fatfs', branch = 'master'}
sdspi = { git = 'https://github.com/northernpaws/embedded-fatfs', branch = 'master'}
block-device-adapters = { git = 'https://github.com/northernpaws/embedded-fatfs', branch = 'master'}
fatfs = { git = 'https://github.com/rafalh/rust-fatfs', branch = 'master'}

mipidsi =  { path = "/Users/keith/Projects/mipidsi"} #{ git = "https://github.com/northernpaws/mipidsi", branch = "master" }
# mipidsi = { git = "https://github.com/almindor/mipidsi", branch = "master" }